--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 
+venv/
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 **/[Mm]emoryCaptures/
