Updating GUI and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,10 @@ crashlytics-build.properties
 **/[Aa]ssets/[Ss]treamingAssets/aa.meta
 **/[Aa]ssets/[Ss]treamingAssets/aa/*
 
+Starchaeologist_Data
+MonoBleedingEdge
+UnityPlayer.dll
+UnityCrashHandler64.exe
+Starchaeologist.exe
+tmp
+
