--- a/Starchaeologist/Packages/manifest.json
+++ b/Starchaeologist/Packages/manifest.json
@@ -1,21 +1,21 @@
 {
   "dependencies": {
     "com.htc.upm.vive.openxr": "1.0.10",
-    "com.unity.collab-proxy": "1.5.7",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.14",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.postprocessing": "3.1.1",
-    "com.unity.recorder": "2.5.7",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.ai.navigation": "1.1.4",
+    "com.unity.collab-proxy": "2.0.5",
+    "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.postprocessing": "3.2.2",
+    "com.unity.recorder": "4.0.1",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
+    "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.interaction.toolkit": "2.2.0",
-    "com.unity.xr.management": "4.2.1",
-    "com.unity.xr.oculus": "1.9.1",
-    "com.unity.xr.openxr": "1.3.1",
-    "com.unity.xr.windowsmr": "4.5.0",
+    "com.unity.xr.interaction.toolkit": "2.4.0",
+    "com.unity.xr.management": "4.3.3",
+    "com.unity.xr.oculus": "4.0.0",
+    "com.unity.xr.openxr": "1.8.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
