--- a/Starchaeologist/Packages/manifest.json
+++ b/Starchaeologist/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.htc.upm.vive.openxr": "1.0.10",
+    "com.unity.animation.rigging": "1.0.3",
     "com.unity.collab-proxy": "1.15.18",
     "com.unity.ide.rider": "3.0.15",
     "com.unity.ide.visualstudio": "2.0.22",
